--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Helen G. Scott
+logo: Helen.jpg
+description: Minimal is a theme for GitHub Pages.
+show_downloads: false
 theme: jekyll-theme-minimal
