--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Helen G. Scott
 logo: Helen.jpg
-description: Minimal is a theme for GitHub Pages.
+description: [Connect woith me on LinkedIn](www.linkedin.com/in/helen-g-scott)
 show_downloads: false
 theme: jekyll-theme-minimal
