--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Helen G. Scott
 logo: Helen.jpg
-description: [Connect woith me on LinkedIn](www.linkedin.com/in/helen-g-scott)
+description: Helen is a computaitonal biologist at Raytheon BBN Technologies. # I Don't think I can do this here [Connect woith me on LinkedIn](www.linkedin.com/in/helen-g-scott)
 show_downloads: false
 theme: jekyll-theme-minimal
