--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Helen G. Scott
-logo: Helen.jpg
-description: Helen is a computaitonal biologist at Raytheon BBN Technologies. # I Don't think I can do this here [Connect woith me on LinkedIn](www.linkedin.com/in/helen-g-scott)
+logo: Headshot.jpg
+description: Helen is a computaitonal biologist at Raytheon BBN Technologies. [About Me](./Bio.md)
 show_downloads: false
 theme: jekyll-theme-minimal
